Unsuccessful (given up) attempt #3 to use REGEX and Recursion to clean up an invalid XML.